页面顶部区域去掉outline样式

--- a/less/editor.less
+++ b/less/editor.less
@@ -80,10 +80,6 @@ html, body {
   font-weight: normal;
 }
 
-* {
-  outline: none;
-}
-
 a{
   color: #FFF;
   text-decoration: none;
@@ -2169,6 +2165,14 @@ input[type="range"]::-webkit-slider-thumb {
 
 .fm-top .eng {
     font-size: 10px;
+}
+
+.fm-top .dropdown-toggle:focus:active {
+    outline: 0;
+}
+
+.fm-top button {
+    outline: 0;
 }
 
 .fm-top-btn {
