解决交限的bug，新增交限判断顺序，删除交限

--- a/scripts/components/road/tpls/attr_cross_tpl/namesTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/namesTpl.html
@@ -1,7 +1,7 @@
 <div ng-controller="namesController">
     <div class="fm-component" >
-        <div class="add-icon" ng-click="addNameInfo();">
-            <i class="glyphicon glyphicon-plus-sign"></i>
+        <div class="add-icon">
+            <i class="glyphicon glyphicon-plus-sign" ng-click="addNameInfo();"></i>
         </div>
         <div class="content" ng-repeat="info in rdCrossNames">
             <form>
