修改线修型

--- a/less/editor.less
+++ b/less/editor.less
@@ -1084,6 +1084,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
 .floatMenu {
   display: none;
   list-style-type: none;
+  cursor: pointer;
   & > li {
     .roundedCorners(16px);
     left: 200px;
