--- a/less/editor.less
+++ b/less/editor.less
@@ -2184,9 +2184,10 @@ input[type="range"]::-webkit-slider-thumb {
   vertical-align: top;
   font-size: 12px;
   text-align: center;
+  font-family: '微软雅黑', Arial;
 }
 .fm-top-btn.blank {
-  color: #8f9acc;
+  color: #8f9aac;
   /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
   background: #ffffff;
   border: 1px solid #dde0e6;
@@ -2263,6 +2264,7 @@ input[type="range"]::-webkit-slider-thumb {
   background: url("../../images/main/btn-icon/more-active.png") no-repeat center center;
 }
 .fm-top-btn.split {
+  margin: 7px 0px;
   background: url("../../images/main/btn-icon/split.png") no-repeat center center;
 }
 .fm-top-btn.loading {
