--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2160,9 +2160,10 @@ a.batchButton {
   vertical-align: top;
   font-size: 12px;
   text-align: center;
+  font-family: '微软雅黑', Arial;
 }
 .fm-top-btn.blank {
-  color: #8f9acc;
+  color: #8f9aac;
   /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
   background: #ffffff;
   border: 1px solid #dde0e6;
@@ -2239,6 +2240,7 @@ a.batchButton {
   background: url("../../images/main/btn-icon/more-active.png") no-repeat center center;
 }
 .fm-top-btn.split {
+  margin: 7px 0px;
   background: url("../../images/main/btn-icon/split.png") no-repeat center center;
 }
 .fm-top-btn.loading {
