--- a/scripts/components/tools/tpls/assist-tools/batchJobPanelNewTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/batchJobPanelNewTpl.html
@@ -18,7 +18,7 @@
                     <div class="radio col-md-12">
                         <label>
                             <input ng-model="radioModel" style="margin-top: 5px" type="radio" name="batchItem" id="optionsRadios2" value="BATCH_SPEED_CLASS"> 批处理速度限制等级
-                            <span style="padding: 0 10px">参数: </span>
+                            <span ng-if="showSelect" style="padding: 0 10px">参数: </span>
                             <select ng-if="showSelect" ng-model="myOption" ng-change="changeParam(myOption)" style="display: inline;width: 125px;font-size:12px;background-color: #555;height: inherit;color: white;padding: 0;" class="form-control">
                                 <option value="1">速度限制来源赋值</option>
                                 <option value="2">速度限制等级值标识</option>
