--- a/styles/imeep/login2.css
+++ b/styles/imeep/login2.css
@@ -27,8 +27,6 @@ body {
 }
 /*******************************************登陆框*****************************************************/
 .wrapper {
-  width: 100%;
-  height: 100%;
   background: url('../../images/poi/main/loginBackgroundColor.png') no-repeat 99% center;
   background-size: 100% 100%;
 }
@@ -85,32 +83,22 @@ footer.bs-docs-footer {
   height: 6%;
 }
 /*****************************************新login样式**************************************************/
-#inputDiy {
-  text-indent: 36px;
-  height: 46px;
-  border-color: #20b3fe;
-  border-radius: 0px;
-}
 #inputDiy:focus {
   box-shadow: 0 0 4px #90d9ff;
-}
-#inputDiy1 {
-  text-indent: 36px;
-  height: 46px;
-  border-color: #20b3fe;
-  border-radius: 0px;
 }
 #inputDiy1:focus {
   box-shadow: 0 0 4px #90d9ff;
 }
-#buttonDiy {
-  height: 46px;
-  color: white;
-  font-size: 18px;
-  border-width: 0;
-  letter-spacing: 10px;
-  border-radius: 0;
+#loginButton {
   background-color: #20b3fe;
+}
+#loginButton:hover {
+  background-color: #009eff;
+}
+#loginButton:active {
+  background-color: #1A82C3;
+  border-color: #1A82C3;
+  color: #FFFFFF;
 }
 .userName {
   width: 22px;
@@ -119,29 +107,6 @@ footer.bs-docs-footer {
   margin-top: 12px;
   margin-left: 14px;
 }
-.loginDiv {
-  position: absolute;
-  top: 50%;
-  margin-top: -106px;
-  left: 50%;
-  margin-left: -256px;
-}
-.rememberMe {
-  float: right;
-  cursor: pointer;
-  margin-right: 10px;
-  margin-top: 2px;
-  height: 16px;
-  width: 16px;
-}
 .backgroundImageDiv {
   background: url('../../images/poi/main/login_logo.png') no-repeat;
-  background-size: 831.6px,630px;
-  width: 831.6px;
-  height: 630px;
-  position: absolute;
-  top: 50%;
-  margin-top: -315px;
-  left: 50%;
-  margin-left: -415.8px;
 }
