--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -123,13 +123,13 @@
                     <li>
                         <label class="control-label">配对组号</label>
                         <div>
-                            <input type="text" ng-model="electronicEyeData.parts[0].groupId"/>
+                            <input type="text" class="chosen-disabled" ng-model="electronicEyeData.parts[0].groupId" disabled/>
                         </div>
                     </li>
                     <li>
                         <label class="control-label">电子眼号</label>
                         <div>
-                            <input type="text" ng-model="electronicEyeData.parts[0].eleceyePid"/>
+                            <input type="text" class="chosen-disabled" ng-model="elecPartPid" disabled/>
                         </div>
                     </li>
                 </ul>
