--- a/scripts/components/poi/tpls/attr-deep/restaurantTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/restaurantTpl.html
@@ -42,11 +42,16 @@
                                     <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType1[key]" ng-click="foodType1Change($event)"> {{value}}
                                 </label>
                             </div>
-                            <br>
-                            <div style="margin-top: 10px;padding-left:4px;">
-                                <label ng-repeat="(key, value) in foodType2Obj" style="font-weight: normal;margin-right: 2px;">
+                            <div style="padding-left:4px;">
+                            	<label ng-repeat="(key, value) in foodType2Obj" style="font-weight: normal;margin-right: 2px;" ng-if="key == 3015" class="fm-specialopt">
                                     <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType2[key]" ng-click="foodType2Change($event)"> {{value}}
                                 </label>
+                                <label ng-repeat="(key, value) in foodType2Obj" style="font-weight: normal;margin-right: 2px;" ng-if="key!= 3015">
+                                    <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType2[key]" ng-click="foodType2Change($event)"> {{value}}
+                                </label>
+                                <!-- <label ng-repeat="(key, value) in foodType2Obj" style="font-weight: normal;margin-right: 2px;">
+                                    <input type="checkbox" value="{{key}}" ng-model="poi.restaurants[0].foodType2[key]" ng-click="foodType2Change($event)"> {{value}}
+                                </label> -->
                             </div>
                         </div>
                     </li>
