--- a/scripts/components/tools/tpls/assist-tools/autofillJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/autofillJobPanelTpl.html
@@ -7,7 +7,7 @@
                 <input type="checkbox" name="tipList" ng-model="selectedTips[item.id]" ng-value="item.id"> {{item.name}}
             </label> -->
             <label ng-repeat="tips in tipsObj" class="col-md-4">
-                <input type="checkbox" name="tipList" ng-model="selectedTips[tips.id]" ng-value="tips.id"> {{tips.name}}
+                <input type="checkbox" name="tipList" ng-model="selectedTips[tips.id]" ng-value="tips.id" ng-checked="tips.checked"> {{tips.name}}
             </label>
         </div>
         <!-- 进度条 -->
