--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
@@ -87,14 +87,13 @@
                                 </label>
                                 <label ng-click="changeLimitType(2);">
                                     <input type="radio" name="researchOrLimited" value=2
-                                           ng-model="rdSubRestrictData.type" title="时间段禁止"
-                                           ng-disabled="rdSubRestrictData.flag == 2">
+                                           ng-model="rdSubRestrictData.type" title="时间段禁止" >
                                     时间段禁止
                                 </label>
                             </div>
                         </li>
                         <li class="list-group-item" style="padding:7px;"
-                            ng-if="rdSubRestrictData.type==='2'||rdSubRestrictData.type===2">
+                            ng-if="rdSubRestrictData.type=='2'">
                             <div ng-include="dateURL" class="muti-date" data-type="1"
                                  date-str='{{rdSubRestrictData["conditions"][0]["timeDomain"]}}'
                                  style="width:100%;padding: 5px;"></div>
