--- a/less/editor.less
+++ b/less/editor.less
@@ -2311,3 +2311,16 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: greenyellow;
   text-decoration: underline;
 }
+//工具条样式
+.msg-alert{
+  border-radius: 50%;
+  background-color: #F63A3A;
+  color: #fff;
+  width: 15px;
+  height: 15px;
+  line-height: 1.2;
+  top: -10px;
+  right: -10px;
+  position: relative;
+  transition: all .3s;
+}
