--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -193,7 +193,7 @@
         <ul class="dropdown-menu dropdown-menu-right" role="menu">
             <li><a href="#" ng-click="openAdvancedToolsPanel('search')">搜 索</a></li>
             <li><a href="#">检 查</a></li>
-            <li><a href="#">道路专项作业</a></li>
+            <li><a href="#" ng-click="openSpecialWorkPanelTpl()">道路专项作业</a></li>
             <li role="presentation" class="divider"></li>
             <li><a href="#" ng-click="linkChecked=!linkChecked">捕捉线 <i class="glyphicon glyphicon-ok pull-right" ng-if="linkChecked"></i></a></li>
             <li><a href="#" ng-click="nodeChecked=!nodeChecked">捕捉点 <i class="glyphicon glyphicon-ok pull-right" ng-show="nodeChecked"></i></a></li>
