--- a/scripts/components/road/tpls/attr_connexity_tpl/showInfoTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/showInfoTpl.html
@@ -39,11 +39,11 @@
             <div><label class="control-label">关系类型</label></div>
             <div class="radio inline" style="text-align: left">
                 <label>
-                    <input type="radio" name="crossingOrLine{$index}" value=1 ng-model="laneData.relationshipType">
+                    <input type="radio" name="crossingOrLine{{$index}}" value=1 ng-model="laneData.relationshipType">
                     路口
                 </label>
                 <label>
-                    <input type="radio" name="crossingOrLine{$index}" value=2 ng-model="laneData.relationshipType">
+                    <input type="radio" name="crossingOrLine{{$index}}" value=2 ng-model="laneData.relationshipType">
                     线线
                 </label>
             </div>
