解决rdnode不能二次编辑的问题（保存后重新查一遍） 解决划线挂接node点，且终点不在node点上是，新link的enodepid赋值错误的问题

--- a/scripts/components/road/tpls/attr_node_tpl/rdNodeFormTpl.html
+++ b/scripts/components/road/tpls/attr_node_tpl/rdNodeFormTpl.html
@@ -39,13 +39,6 @@
                             </div>
                         </li>
                         <li>
-                            <label>辅助标志</label>
-                            <div>
-                                <select ng-model="auxiFlag" ng-options="value.id as value.label for value in auxiFlagOptions" >
-                                </select>
-                            </div>
-                        </li>
-                        <li>
                             <label>图幅号码</label>
                             <div>
                                 <!-- <div style="text-align: left" ng-repeat="mitem in rdNodeData.meshes">
@@ -57,7 +50,7 @@
                         <li>
                             <label>Node形态</label>
                             <div>
-                                <a  ng-click="showPopover()" style="cursor: pointer;">添加</a>
+                                <a  ng-click="showPopover()" style="cursor: pointer;">编辑</a>
                             </div>
                         </li>
                         <li>
