--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -23,7 +23,7 @@
                       <div><input fm-edit-view type="text" class="fm-control" ng-model="poi.postCode"/></div>
                   </li>
                   <li>
-                      <label>种 别</label>
+                      <label>分 类</label>
                       <div class="select2-option">
                           <select fm-edit-view class="fm-control" ng-model="poi.kindCode"
                                   no_results_text="'没有找到'"  placeholder_text_single="'--请选择--'" search_contains=true
