--- a/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
@@ -17,13 +17,12 @@
     <div class="title">执 行 检 查</div>
     <div class="content">
         <div class="fm-tabs" style="padding: 0 10px;" ng-init="batchType=0">
-            <a href="#" class="tab" ng-class="{1:'active'}[batchType]" ng-click="switchBatchType(1)">道路检查</a>
             <a href="#" class="tab" ng-class="{0:'active'}[batchType]" ng-click="switchBatchType(0)">POI检查</a>
-            <!--<div style="position: absolute;left: 42%;top: 50px;"><lable style="font-weight: bold;"><input ng-model="currentBatchBag.checked" ng-click="batchSelect(currentBatchBag)" type="checkbox" style="position: relative;top: 3px;"> 全选</lable></div>-->
+            <a href="#" class="tab" ng-class="{1:'active'}[batchType]" ng-click="switchBatchType(1)">道路检查</a>
         </div>
         <div class="container-fluid" ng-switch="batchType">
-            <div ng-switch-when=0 class="row scroll-styled dark" style="min-height: 200px;max-height: 300px;padding: 0 10px;">
-                <div style="width: 40%;float: left">
+            <div ng-switch-when=0 class="row dark">
+                <div class="scroll-styled" style="width: 40%;float: left">
                     <table class="table table-bordered table-condensed fm-console-table">
                         <thead>
                         <tr>
@@ -44,8 +43,8 @@
                         </tbody>
                     </table>
                 </div>
-                <div style="width: 58%;float: right">
-                    <table class="table table-bordered table-condensed fm-console-table">
+                <div class="scroll-styled" style="width: 58%;float: right;min-height: 200px;max-height: 350px;padding: 0 10px;">
+                    <table class="table table-bordered table-condensed">
                         <thead>
                         <tr>
                             <th>选择</th>
@@ -71,8 +70,8 @@
                 </div>
             </div>
 
-            <div ng-switch-when=1 class="row scroll-styled dark" style="max-height: 200px;margin:5px;">
-                <div style="width: 40%;float: left">
+            <div ng-switch-when=1 class="row dark">
+                <div class="scroll-styled" style="width: 40%;float: left">
                     <table class="table table-bordered table-condensed fm-console-table">
                         <thead>
                         <tr>
@@ -93,8 +92,8 @@
                         </tbody>
                     </table>
                 </div>
-                <div style="width: 58%;float: right">
-                    <table class="table table-bordered table-condensed fm-console-table">
+                <div class="scroll-styled" style="width: 58%;float: right;min-height: 200px;max-height: 350px;padding: 0 10px;">
+                    <table class="table table-bordered table-condensed">
                         <thead>
                         <tr>
                             <th>选择</th>
@@ -111,7 +110,7 @@
                         <tr ng-class-odd="'tableOdd'" ng-repeat="item in currentSearchItems">
                             <td><input ng-model="item.checked" ng-change="clickBatchSelect(item)" type="checkbox" /></td>
                             <td ng-click="getCheckItem(item)">{{item.ruleName}}</td>
-                            <td ng-click="getCheckItem(item)">{{item.ruleDesc}}</td>
+                            <td ng-click="getCheckItem(item)">{{item.ruleDesc|limitTo:50}}</td>
                             <td ng-click="getCheckItem(item)">{{item.ruleLevel}}</td>
                             <td ng-click="getCheckItem(item)">{{item.depends}}</td>
                         </tr>
@@ -120,10 +119,9 @@
                 </div>
             </div>
         </div>
-
-        <!---->
-        <div style="text-align:center;">
-            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doExecute()">执 行 检 查</button>
-        </div>
+    </div>
+    <!---->
+    <div style="text-align:center;padding: 10px 0 15px 0;">
+        <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doExecute()">执 行 检 查</button>
     </div>
 </div>
