--- a/scripts/components/road/tpls/attr_speedLimit_tpl/linkSpeedLimitTpl.html
+++ b/scripts/components/road/tpls/attr_speedLimit_tpl/linkSpeedLimitTpl.html
@@ -20,7 +20,7 @@
                             <div><label class="control-label">顺向速度</label></div>
                             <div class="inline">
                                 <input type="text"
-                                       placeholder="0530" id="{{speedLimitsData.rowid}}fromSpeedLimit"
+                                       id="{{speedLimitsData.rowid}}fromSpeedLimit"
                                        ng-model="speedLimitsData.fromSpeedLimit"
                                        ng-disabled="toEditable">
                             </div>
@@ -39,7 +39,7 @@
                             <div><label class="control-label">逆向速度</label></div>
                             <div class="inline">
                                 <input type="text"
-                                       placeholder="0530" id="{{item.rowid}}toSpeedLimit"
+                                       id="{{item.rowid}}toSpeedLimit"
                                        ng-model="speedLimitsData.toSpeedLimit"
                                        ng-disabled="fromEditable">
                             </div>
