--- a/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfConditionTpl.html
@@ -31,7 +31,7 @@
             <div><label class="control-label">顺向速度</label></div>
             <div class="inline">
                 <input type="text"
-                       placeholder="0530" id="{{oridiData.rowid}}fromSpeedLimit"
+                       placeholder="0530" id="{{oridiData.rowid}}fromSpeedLimit" ng-change="changeClass(oridiData,2)"
                        ng-model="oridiData.fromSpeedLimit" ng-disabled="rticDir ==3">
             </div>
         </li>
@@ -39,7 +39,7 @@
             <div><label class="control-label">逆向速度</label></div>
             <div class="inline">
                 <input type="text"
-                       placeholder="0530" id="{{item.rowid}}toSpeedLimit"
+                       placeholder="0530" id="{{item.rowid}}toSpeedLimit" ng-change="changeClass(oridiData,3)"
                        ng-model="oridiData.toSpeedLimit" ng-disabled="rticDir ==2">
             </div>
         </li>
@@ -67,7 +67,7 @@
         <li class="list-group-item">
             <div><label class="control-label">限速等级</label></div>
             <div class="inline">
-                <select ng-model="item.speedClass"
+                <select ng-model="oridiData.speedClass" ng-change="changeClassWork(oridiData)"
                         ng-options="value.id as value.label for value in speedClassOption">
                     <!--<option>&#45;&#45;</option>-->
                 </select>
