--- a/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
@@ -67,7 +67,7 @@
                 <div><label class="control-label">限速等级</label></div>
                 <div class="inline">
                     <select ng-model="oridiData.speedClass"
-                            ng-options="value.id as value.label for value in speedClassOption" ng-change="changeClassWork()">
+                            ng-options="value.id as value.label for value in speedClassOption" ng-change="changeClassWork(oridiData)">
                         <!--<option>&#45;&#45;</option>-->
                     </select>
                 </div>
