job执行消息提示样式修改

--- a/less/editor.less
+++ b/less/editor.less
@@ -1648,13 +1648,13 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
 }
 
 .log-message-container {
-  .absolute-position(auto,auto,0,40px);
+  .absolute-position(auto,auto,0,60px);
   width: 250px;
   z-index: 99;
-  display: none;
+  display: block;
   .log-message {
     color: #fff;
-    background-color: #49A7DA;
+    background-color: rgba(165, 165, 165, 0.42);
     padding: 13px;
     height: 40px;
     margin-top: 3px;
