--- a/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
@@ -67,7 +67,7 @@
                         <li>
                             <label>Link{{$index+1}}号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.linkPid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.linkPid" disabled/>
                             </div>
                         </li>
                     </ul>
