--- a/less/editor.less
+++ b/less/editor.less
@@ -1651,7 +1651,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   .absolute-position(auto,auto,0,60px);
   width: 250px;
   z-index: 99;
-  display: block;
+  display: none;
   .log-message {
     color: #fff;
     background-color: rgba(165, 165, 165, 0.42);
